<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/color_white"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:textSize="@dimen/common_size_text_18sp"
            android:layout_margin="@dimen/common_margin_16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            style="@style/themeTextNormalBlackWeight400"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/dialog_internet_lost_title"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/dialog_internet_lost_content"
            android:layout_margin="@dimen/common_margin_16dp"
            android:textSize="@dimen/common_size_text_14sp"
            style="@style/themeTextNormalBlackWeight400"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/view_line"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/view_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_content"
            app:layout_constraintBottom_toTopOf="@+id/button_ok"
            android:layout_width="0dp"
            android:background="@color/color_bg_view_dialog"
            android:layout_height="@dimen/view_height_1dp"/>

        <Button
            app:layout_constraintTop_toBottomOf="@id/view_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/button_ok"
            android:layout_width="0dp"
            android:background="@android:color/transparent"
            app:backgroundTint="@null"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginEnd="@dimen/common_margin_16dp"
            android:layout_marginStart="@dimen/common_margin_16dp"
            android:layout_marginBottom="@dimen/common_margin_4dp"
            android:text="@string/dialog_internet_button_try"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>