<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.android.developmentchallenge.viewmodel.home.HomeActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:padding="@dimen/common_padding_10dp">

        <EditText
            android:id="@+id/search_edt"
            style="@style/themeTextNormalBlackWeight400"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_green_main"
            android:ellipsize="end"
            android:hint="@string/home_hint_edit_text_search"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/color_text_gray_1"
            android:textColorHint="@color/color_text_gray_2"
            android:textCursorDrawable="@drawable/shape_cursor_edt"
            android:textSize="@dimen/common_size_text_18sp"
            app:layout_constraintBottom_toBottomOf="@+id/search_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/search_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_content_button_search"
            android:textAllCaps="false"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh_swipe"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_edt">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/forecast_recycler"
                adapterRecyclerView="@{viewModel.adapterHomeForecast}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/common_padding_4dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/item_home_forecast" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/no_data_tv"
            bindingIsVisibleNoDataText="@{viewModel.adapterHomeForecast.dataList.size()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_content_no_data"
            android:textSize="@dimen/common_size_text_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_button" />

        <ImageView
            android:id="@+id/speech_button"
            android:layout_width="@dimen/image_height_80dp"
            android:layout_height="@dimen/image_height_80dp"
            android:background="@drawable/shape_background_voice_recognizer"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/common_padding_24dp"
            android:src="@drawable/ic_microphone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:tint="@color/color_white" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>